k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erp-template
  labels:
    app.kubernetes.io/name: erp-template
