k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-template
  namespace: erp-template
  labels:
    app.kubernetes.io/name: erp-template
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: erp-template
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
